corrected hero text spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,6 @@ font-weight: lighter;
   color: white;
   margin: 20px 0px;
   font-weight: 400;
-  line-height: 18px;
   font-size: 30px;
    text-shadow: 1px 1px 1px #000;
 
@@ -195,7 +194,7 @@ footer a {
   .hero h1 {
     position: relative;
     font-size: 45px;
-    line-height: 30px; }
+
 }
 
 @media (min-width: 769px) and (max-width: 978px) {
